plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
bootJar { enabled = false }
jar { enabled = true }


repositories {
    mavenCentral()
}

dependencies {
    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    //Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

}

subprojects {
    apply plugin: "org.springframework.boot"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "java"

    version = "1.0.0-SNAPSHOT"
    sourceCompatibility = "17"

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        compileOnly "org.projectlombok:lombok"
        annotationProcessor "org.projectlombok:lombok"
        testCompileOnly("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")
        // VALIDATION
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        //Security
        implementation 'org.springframework.boot:spring-boot-starter-security'
        testImplementation 'org.springframework.security:spring-security-test'

    }


    tasks.named("test") {
        useJUnitPlatform()
    }
}
project(':module-api') {
    dependencies {
        implementation project(':module-domain')
    }
}
